# godot-export-logs-validator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE.md  REUSE.toml  pyproject.toml
.github/: renovate.json
.github/workflows/: changelog_verifier.yml  lint_pr_title.yml  release-packaging.yml
src/: main.rs
